--- a/static/templates/surveys_list.html
+++ b/static/templates/surveys_list.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 
+{% block h3-title %}
+{{h3}}
+{% endblock h3-title %} 
+
 {% block body %}
 
 <div class="container">
     
-        <h3>{{list_head}}</h3>
-        <br>
         {% if not object_list %}
         <p> Empty </p>
         
@@ -43,6 +45,8 @@
                 <p></p>
                    </form>
         {% endif %}
+        <p></p>
+        <p><a href="{% url 'survey:add_survey' %}"> Add a survey </a></p>
 </div>
 
 {% endblock %}
