--- a/static/templates/add_template.html
+++ b/static/templates/add_template.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 
+{% block title %}
+<title>{{title}}</title> 
+{% endblock title %} 
+
+{% block h3-title %}
+{{h3}}
+{% endblock h3-title %} 
+
 {% block body %}
 
 <div class="container">
     <form method="post">
-        {% csrf_token %}
-        <h3>{{h3}}</h3>
+        {% csrf_token %} 
+
+        
         <table class="table">{{ form.as_table }}</table>
 
         
