--- a/static/templates/survey_detail.html
+++ b/static/templates/survey_detail.html
@@ -4,10 +4,13 @@
 <title>{{title}}</title> 
 {% endblock title %} 
 
+{% block h3-title %}
+{{h3}}
+{% endblock h3-title %} 
+
 {% block body %}
 
 <div class="container">
-    <h3>{{survey.title}}</h3>
 
     <form action="{% url 'survey:survey_detail' pk=survey.id %}" method="post">
         {% csrf_token %}
