--- a/survey_app/templates/survey_app/home.html
+++ b/survey_app/templates/survey_app/home.html
@@ -25,6 +25,15 @@
 <div class="container">
         
         <p>Log in to continue! See you!</p>
+
+        <img src="media/example.jpg">
+        <img src="example.jpg">
+        <img src="images/example.jpg">
+        <img src='survey_app/images/example.jpg'>
+        <img src='static/survey_app/images/example.jpg'>
+        <img src='static/images/example.jpg'>
+        <img src='static/example.jpg'>
+        <img src='survey_app/example.jpg'>
         
         
 </div>
