--- a/static/templates/survey_detail.html
+++ b/static/templates/survey_detail.html
@@ -12,7 +12,7 @@
 
 <div class="container">
 
-    <form action="{% url 'survey:survey_detail' pk=survey.id %}" method="post">
+    <form method="post">
         {% csrf_token %}
         <table class="table">
                 <tr>
