--- a/static/templates/surveys_list.html
+++ b/static/templates/surveys_list.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+<title>{{title}}</title> 
+{% endblock title %} 
+
 {% block h3-title %}
 {{h3}}
 {% endblock h3-title %} 
