--- a/static/templates/surveys_list.html
+++ b/static/templates/surveys_list.html
@@ -17,7 +17,7 @@
         
         {% else %}
 
-        <form action="{% url 'survey:survey_list' %}" method="post">
+        <form action="{% url 'survey_app:survey_list' %}" method="post">
                 {% csrf_token %}
                 <table class="table">
                         <tr>
@@ -29,10 +29,10 @@
                         </tr>
                         {% for item in object_list %}
                         <tr>
-                                <td><a href="{% url 'survey:survey_detail' pk=item.id %}"> 👁 </a></td>
+                                <td><a href="{% url 'survey_app:survey_detail' pk=item.id %}"> 👁 </a></td>
                                 <td> {{item.title}}</td>
                                 <td><input type="checkbox" name="{{item.id}}" id="{{item.id}}"></td>
-                                <td><a href="{% url 'survey:results' survey_id=item.id %}"> ✅ </a></td>
+                                <td><a href="{% url 'survey_app:results' survey_id=item.id %}"> ✅ </a></td>
                         </tr>
                         {% endfor %}
                         <tr>
@@ -49,7 +49,7 @@
                    </form>
         {% endif %}
         <p></p>
-        <p><a href="{% url 'survey:add_survey' %}"> Add a survey </a></p>
+        <p><a href="{% url 'survey_app:add_survey' %}"> Add a survey </a></p>
 </div>
 
 {% endblock %}
