--- a/static/templates/queston_detail.html
+++ b/static/templates/queston_detail.html
@@ -19,7 +19,7 @@
     {% endfor %}
     
 
-    <p><a href="{% url 'survey:add_choice' question_id=question_id %}"> Add a choice </a></p>
+    <p><a href="{% url 'survey_app:add_choice' question_id=question_id %}"> Add a choice </a></p>
 </div>
 
 {% endblock %}
