--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -14,7 +14,8 @@
 
         <!-- <img src="{% static 'survey_app/images/example.jpg' %}" class="img-fluid"> -->
         Example of pages for registered users:
-        <img src="{% static 'images/example.jpg' %}" class="img-fluid border border-secondary">
+        "img"
+        <!-- <img src="{% static 'images/example.jpg' %}" class="img-fluid border border-secondary"> -->
         
         
 
