change url path

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -14,8 +14,7 @@
 
         <!-- <img src="{% static 'survey_app/images/example.jpg' %}" class="img-fluid"> -->
         Example of pages for registered users:
-        "img"
-        <!-- <img src="{% static 'images/example.jpg' %}" class="img-fluid border border-secondary"> -->
+        <img src="{% static 'images/example.jpg' %}" class="img-fluid border border-secondary">
         
         
 
