--- a/static/templates/answer.html
+++ b/static/templates/answer.html
@@ -21,7 +21,7 @@
 
         {% if not questions %}
         <p>Creator hasn't added questions yet</p>
-        {% endif %}
+        {% else %}
 
             {% for pair in questions %}
             <tr>
@@ -35,6 +35,7 @@
 
         
         <button type="submit" class="btn btn-primary"> submit </button>
+        {% endif %}
     
     </form>
  
