create_demo_user + button

--- a/static/templates/home.html
+++ b/static/templates/home.html
@@ -9,12 +9,17 @@
 
 {% block body %}
 <div class="container">
+        {% if auth == False %}
         <blockquote class="blockquote text-center mt-1 mb-5">
                 <p class="mb-0">Answer someone's survey or Login to create your own surveys!</p>
                 <footer class="blockquote-footer">
-                        <button><a href="#" class="nav-link text-dark">demo user login</a></button>
+                        <form method="post">
+                        {% csrf_token %}
+                        <button type="submit" class="text-dark">demo user login</button>
+                        </form>
                 </footer>
         </blockquote>
+        {% endif %}
 
         <div class="mt-lg-2 mb-lg-2">
         <p></p>
