make buttons the same

--- a/static/templates/survey_detail.html
+++ b/static/templates/survey_detail.html
@@ -30,7 +30,7 @@
                 <tr>
                     <td></td>    
                         <td>
-                        <input type="submit" name="download" value="download my list" >  </input>
+                        <button type="submit" name="download" >download my list</button>
                         </td>        
                         
                         <td><button type="submit" name="delete"> delete selected</button></td>
